<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffcc" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/taxis"
        android:background="#5c246e"
        android:shadowColor="#C02938"
          android:shadowDx="0"
          android:shadowDy="0"
          android:shadowRadius="5"
        android:gravity="center"
        android:textColor="#FFFFFF"
       android:textSize="28dp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold|italic"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:text="@string/t"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:text="@string/avail"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
   
    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
      android:textStyle="bold"
        android:layout_marginLeft="60dp"
       android:onClick="yes"
        android:text="@string/yes" />

   
    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
     	android:textStyle="bold"
     	android:onClick="no"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/no" />

     </LinearLayout>
    
</LinearLayout>
