<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg2"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:background="#000080"
        android:gravity="center"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="7"
        android:text="@string/metro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.86" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="54dp"
            android:layout_height="60dp"
            android:src="@drawable/s1" />

        <Button
            android:id="@+id/button1"
            android:layout_marginTop="10dp"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:onClick="showLines"
            android:layout_marginLeft="21dp"
            android:text="@string/view"
            android:textStyle="bold" />

    </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1.86" >

         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="64dp"
             android:layout_height="47dp"
             android:src="@drawable/search" />

         <Button
             android:id="@+id/button2"
             android:layout_width="226dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
             android:onClick="showPage"
             android:textStyle="bold"
             android:text="@string/dest" />
     </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.86" >
    
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="78dp"
         android:layout_height="56dp"
         android:src="@drawable/map" />

    <Button
        android:id="@+id/button3"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:onClick="route"
        android:textStyle="bold"
        android:text="@string/map" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.86" >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/taxi" />
    
    <Button
        android:id="@+id/button4"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
      	android:textStyle="bold"
        android:onClick="taxi"
        android:layout_marginLeft="20dp"
        android:text="@string/taxi" />
 </LinearLayout>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.86" >
    
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:src="@drawable/download" />

    <Button
        android:id="@+id/button5"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="about"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:text="@string/about" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.86" >
    
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:src="@drawable/feedback" />

    <Button
        android:id="@+id/button6"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:onClick="feedback"
        android:text="@string/feedback" />
    </LinearLayout>
    

</LinearLayout>