<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stn"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:shadowColor="#FFFFFF"
          android:shadowDx="0"
          android:shadowDy="0"
          android:shadowRadius="7"
          
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rarr" />

    <Button
        android:id="@+id/button1"
        android:textColor="#000000"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:background="#DC143C"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:onClick="showRed"
        android:layout_height="wrap_content"
        android:text="@string/red" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/garr" />

    <Button
        android:id="@+id/button2"
        android:textColor="#000000"
        android:layout_margin="10dp"
        android:background="#7CFC00"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:onClick="showGreen"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/gr" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yarr" />

    <Button
        android:id="@+id/button3"
        android:textColor="#000000"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:onClick="showYellow"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:background="#FFFF33"
        android:layout_height="wrap_content"
        android:text="@string/ye" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/barr" />

    <Button
        android:id="@+id/button4"
        android:textColor="#000000"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:background="#4169E1"
        android:onClick="showBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bl" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
   
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/varr" />

    <Button
        android:id="@+id/button5"
        android:textColor="#000000"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:onClick="showViolet"
        android:layout_height="wrap_content"
        android:background="#8A2BE2"
        android:text="@string/vi" />
     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
   

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/oarr" />

    <Button
        android:id="@+id/button6"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:onClick="showOrange"
        android:background="#FF8C00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or" />

     </LinearLayout>
</LinearLayout>
